# music-minion-cli

./: .claudeignore  .coverage  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  NYE 25.m3u8  NYE 25_final.m3u8  NYE 25_fixed.m3u8  README.md  TESTING_AUTOPLAY.md  TODOS.md  ai-learnings.md  changelog.md  check_csv_changes.py  check_file_metadata.py  check_track_5981.py  debug_hotreload.py  debug_import.py  debug_track_update.py  final_sc_ids.txt  import_playlist.py  low_confidence_keys.txt  match_nye25_to_sc_library.py  match_nye25_to_soundcloud.py  matched_sc_ids.txt  metadata-corruption-incident-report.md  metadata-enhancement-plan.md  nye25_matches.md  package-lock.json  package.json  playground.ipynb  pyproject.toml  read_metadata.py  soundcloud_matches_review.csv  spotify_soundcloud_matches_20251122_105246.csv  spotify_soundcloud_matching.ipynb  test_autoplay.py  test_playlist_analytics.py  (+6 more)
.claude/: workflow-state.json
.claude/plans/: bucket-playlist-linking.md
archive/: music-minion-cli-plan.md
docker/pi-deployment/: docker-compose.yml
docker/radio/: .gitignore  Caddyfile  docker-compose.prod.yml  docker-compose.yml  icecast.xml  import_tracks.py
docs/: ai-tag-review-system.md  architecture-migration.md  audio-playback-fixes-plan.md  blessed-ui-implementation-plan.md  builder-sorting-waveform-plan.md  code-review-fixes-completion-plan.md  code-review-fixes-index.md  command-bar-cursor-movement-plan.md  comparison-autoplay-implementation-plan.md  comparison-autoplay-implementation-steps.md  comparison-autoplay-step-1-helper-function.md  comparison-autoplay-step-2-integrate-poll-player-state.md  comparison-autoplay-step-3-testing.md  filter-addition-bug-fix-plan.md  fix-step-1-player-critical-issues.md  fix-step-2-playback-type-safety.md  fix-step-3-rating-refactor.md  fix-step-4-database-annotations.md  fix-step-5-standardize-type-hints.md  genre-selection-filter-plan.md  hot-reload-implementation.md  ideas.md  incomplete-items.md  loguru-migration-plan.md  mobile-web-ui-plan.md  multi-source-remaining-features.md  music-minion-bug-report.md  normalization-implementation-plan.md  opencode-mobile-web-ui-plan.md  playback-session-tracking-plan.md  playlist-builder-filter-bug-fix-plan.md  playlist-elo-ranker-plan.md  playlist-system-plan.md  refactor-circular-imports.md  reposts-playlist-breakdown.md  soundcloud-integration-analysis.md  soundcloud-reusable-code.md  spotify-implementation-plan.md  stats-modal-overlay-plan.md  stream-500-error-fix-plan.md  (+5 more)
docs/abstract-spinning-brook/: 01-trackcard-emoji-support.md  04-history-timeline-emoji.md  progress.md
docs/adaptive-forging-leaf/: 01-database-schema.md  02-queue-manager-module.md  03-backend-player-integration.md  04-frontend-state-management.md  05-frontend-ui-updates.md  06-test-coverage.md  README.md  progress.md
docs/add-csv-import-support/: 01-task.md
docs/add-debug-logging-ranking-params/: 01-task.md
docs/archive/: 2026-02-12-live-sync-implementation.md  compact-comparison-ui-plan.md  filter-editor-fixes-plan.md  filter-editor-list-selection-implementation.md  genre-selection-filter-plan.md  hot-reload-usage.md  incomplete-items.md  metadata-editor-plan.md  mobile-ui-optimization-plan.md  persistent-audio-playback-plan.md  playlist-analytics-feature.md  playlist-builder-operator-bug-fix-plan.md  stats-modal-overlay-plan.md  todo-pre-refactor.md
docs/buzzing-frolicking-nygaard/: 01-backend-exclusion-filter.md  02-backend-skip-endpoints.md  03-frontend-api-functions.md  04-frontend-hook-mutations.md  05-frontend-review-mode-ui.md  06-frontend-skipped-dialog.md  progress.md
docs/command-bar-cursor-movement/: README.md  (+4 more)
logs/: metadata_enrichment.jsonl
mobile/: app.json  babel.config.js  eas.json  index.js  metro.config.js  package.json  tailwind.config.js  tsconfig.json
scripts/: add-custom-emoji.py  add_orphans.py  analyze_bpm_key.py  backfill_artwork.py  backfill_sc_matches.py  bulk-tag-emoji.py  check_playlists.py  consolidate_playlists.py  convert_opus_to_mp3.py  convert_to_opus.py  deploy-to-pi.sh  enrich_metadata.py  fix_soundcloud_local_path.py  import_csv.py  import_metadata_csv.py  merge_opus_duplicates.py  migrate_playlist_ratings.py  preseed_soundcloud_likes.py  repair_yearly_playlists.py  reresolve_dead_sc_track.py  setup-pi-cron.sh  test_key_algorithms.py  update_playlist_format.py
shared/: package.json  tsconfig.json
tests/: test_command_bar_cursor.py  test_core_database.py  test_feed_sync.py  test_filter_editor.py  test_player_organizer_queue.py  test_selection_helper.py
(+912 files in other folders)
