[project]
name = "music-minion"
version = "0.1.0"
description = "A CLI music player focused on contextual music curation through real-time feedback and learning user preferences over time"
readme = "README.md"
authors = [
    { name = "Kevin", email = "andrewskevin92@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mutagen>=1.47.0", # MP3/M4A metadata handling
    "openai>=1.0.0", # AI integration (optional)
    "python-dotenv>=1.0.0", # Environment variable management
    "rich>=13.0.0", # Terminal UI formatting
    "blessed>=1.20.0", # Terminal UI library
    "pyserato>=0.1.0", # Serato crate import/export
    "prompt_toolkit>=3.0.0", # Interactive CLI with autocomplete
    "simple-term-menu>=1.6.0", # Interactive arrow-key menus
    "requests>=2.31.0", # HTTP client for provider APIs
    "pandas>=2.2.3",
    "scikit-learn>=1.3.0", # TF-IDF vectorization for fast track matching
    "rapidfuzz>=3.0.0", # Fast fuzzy string matching for track similarity
    "loguru>=0.7.0", # Unified logging with dual output (console + file)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "watchdog>=3.0.0",  # File system event monitoring for hot-reload
]

[project.scripts]
music-minion = "music_minion.cli:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]
